--- a/shopping-list/src/Components/AddList/AddShoppingList.css
+++ b/shopping-list/src/Components/AddList/AddShoppingList.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 20px !important;
 }
 
 .button {
