--- a/shopping-list/src/Components/LandingPage/LandingPage.css
+++ b/shopping-list/src/Components/LandingPage/LandingPage.css
@@ -22,6 +22,7 @@ h3 {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 2em !important;
     width: 100%;
     height: 100%;
     position: relative;
